--- a/index.html
+++ b/index.html
@@ -107,28 +107,28 @@
                                 <ul class="our-team-icon">
                                     <li class="our-team-icon-list">
                                         <a href="" class="our-team-icon-link">
-                                            <svg width="16" height="16">
+                                            <svg width="16" height="16" class="link-color">
                                                 <use href="./images/icons.svg#icon-instagram-2"></use> 
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="our-team-icon-list">
                                         <a href="" class="our-team-icon-link">
-                                            <svg width="16" height="16">
+                                            <svg width="16" height="16" class="link-color">
                                                 <use href="./images/icons.svg#icon-twitter-1"></use> 
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="our-team-icon-list">
                                         <a href="" class="our-team-icon-link">
-                                            <svg width="16" height="16">
+                                            <svg width="16" height="16" class="link-color">
                                                 <use href="./images/icons.svg#icon-facebook-1"></use> 
                                             </svg>
                                         </a>
                                     </li>
                                     <li class="our-team-icon-list">
                                         <a href="" class="our-team-icon-link">
-                                            <svg width="16" height="16">
+                                            <svg width="16" height="16"class="link-color">
                                                 <use href="./images/icons.svg#icon-linkedin-1"></use> 
                                             </svg>
                                         </a>
