--- a/index.html
+++ b/index.html
@@ -278,8 +278,7 @@
                                 <img src="./images/img-portfolio-2.jpg"  width="360"
                                 alt="Cashless Payment" />
                                 <div class="cover-portfolio-card">
-                                    <p class="cover-text-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
-                                        · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="cover-text-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div> 
                             </div>   
                             <div class="small-container">
@@ -293,8 +292,7 @@
                                 <img src="./images/img-portfolio-3.jpg"  width="360" 
                                 alt="Meditation App" />
                                 <div class="cover-portfolio-card">
-                                    <p class="cover-text-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
-                                        · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="cover-text-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div> 
                             </div>   
                             <div class="small-container">
@@ -308,8 +306,7 @@
                                 <img src="./images/img-portfolio-4.jpg"  width="360" 
                                 alt="Taxi Service" />
                                 <div class="cover-portfolio-card">
-                                    <p class="cover-text-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
-                                        · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="cover-text-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div> 
                             </div>   
                             <div class="small-container">
@@ -323,8 +320,7 @@
                                 <img src="./images/img-portfolio-5.jpg"  width="360" 
                                 alt="Screen Illustrations" />
                                 <div class="cover-portfolio-card">
-                                    <p class="cover-text-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
-                                        · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="cover-text-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div> 
                             </div>   
                             <div class="small-container">
@@ -338,8 +334,7 @@
                                 <img src="./images/img-portfolio-6.jpg"  width="360" 
                                 alt="Online Courses" />
                                 <div class="cover-portfolio-card">
-                                    <p class="cover-text-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
-                                        · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                    <p class="cover-text-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                 </div> 
                             </div>   
                             <div class="small-container">
