--- a/index.html
+++ b/index.html
@@ -262,10 +262,12 @@
                             <div class="cover-card">
                                 <img src="./images/img-portfolio-1.jpg"  width="360" 
                                 alt="Banking App" />
-                                <div class="cover-portfolio-card">
+                                <p class="cover-text-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
+                                    · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                                <!-- <div class="cover-portfolio-card">
                                     <p class="cover-text-portfolio">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App 
                                         · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-                                </div>        
+                                </div>         -->
                             </div> 
                             <div class="small-container">
                                 <h3 class="our-portfolio-item">Banking App</h3>
